--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
+    "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -13,11 +14,13 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.0.1",
-    "googleapis": "^150.0.1"
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^5.1.0",
+    "googleapis": "^126.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0"
   },
   "private": true
