--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^5.1.0",
-    "googleapis": "^126.0.0"
+    "googleapis": "^126.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
